[package]
name = "delaunay"
version = "0.1.0"
authors = ["christofer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "gui"
path = "examples/gui.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"

[dev-dependencies]
ggez = "0.5.1"
rand = "0.7.3"
